...
						isSearchBarActive = !isSearchBarActive
						if (isSearchBarActive) component.setSearchMenuItemExpanded()
						else component.setSearchMenuItemCollapsed()
					}) {
						Icon(
							imageVector = Icons.Filled.Search,
							contentDescription = "Search icon",
							tint = Colors.onPrimaryContainer
						)
					}
				}
			)
		}
...
				onQueryChange = {
					searchQuery = it
					component.onSearchQueryChanged(it)
				},
				onSearch = { closeSearchBar() },
				active = true,
				modifier = Modifier.semantics { contentDescription = "Search for tokens" },
				onActiveChange = {
					isSearchBarActive = it
					if (!isSearchBarActive) focusManager.clearFocus()
				},
				placeholder = { Text(stringResource(R.string.search_prompt)) },
				leadingIcon = {
...
