...
			)
			Spacer(modifier = Modifier.weight(1f))
			Button(
				modifier = Modifier.padding(16.dp),
				onClick = { component.onForwardClicked() }
			) {
				Text("ERC20 Tokens")
			}
		}
	}

}

...
